# webgpu-tensors

./: .gitignore  Cargo.toml  README.md  deno.json  eslint.config.mjs  index.html  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cpu.rs  lib.rs  utils.rs  webgpu.rs
crates/core/src/tensors/: mod.rs  tensor.rs
crates/core/src/tensors/cpu/: mod.rs
crates/core/src/tensors/webgpu/: mod.rs
crates/core/tensors/cpu/: mod.rs
crates/core/tensors/webgpu/: mod.rs
crates/wasm/: Cargo.toml  package.json
crates/wasm/src/: lib.rs
examples/: ex0.py  ex0.rs  ex0.ts  ex1.py  ex1.rs  ex1.ts  ex2.py  ex2.rs  ex2.ts  matmul.ts  py2.py
src/: js-tensors.ts  main.ts  style.css  vite-env.d.ts  webgpu-tensors.ts  webgpu.ts
tests/: tensors.test.ts  tensors_test.py
