[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
webgpu-tensors-cli = { path = "./crates/cli" }
webgpu-tensors = { path = "./crates/core" }
webgpu-tensors-wasm = { path = "./crates/wasm" }

[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/wasm",
]

[workspace.dependencies]
