[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
webgpu-tensors = { path = "./crates/core" }

[dev-dependencies]
webgpu-tensors = { path = "./crates/core" }

[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/wasm",
]

[[example]]
name = "ex1"
path = "examples/ex1.rs"

[workspace.dependencies]
wgpu = { version = "0.17", features = ["webgl"] }
