[package]
name = "webgpu-tensors"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.210", features = ["derive"] }
wgpu = { version = "0.17", features = ["webgl"] }
bytemuck = "1.13"
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "macros"] }
