[package]
name = "webgpu-tensors-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webgpu-tensors = { path = "../core" }
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.69", features = ["Document", "Element", "Window", "console", "HtmlCanvasElement", "HtmlCollection"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
